--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,38 @@ img {
   height: 100px;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.plants {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3.25rem;
+}
+
+.plant-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
