add styles to footer and header to position links in opposite each other

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -67,6 +67,12 @@ input {
   gap: 1rem;
 }
 
-.footer {
+.left-links {
+  margin-right:auto;
+}
+
+.footer, .header {
   background-color: #eee;
+  display: flex;
+  padding: 1rem 0.5rem;
 }
