--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,69 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+ul  {
+  list-style-type: none;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  /* grid-template-rows: auto 3fr auto; */
+  gap: 4px;
+
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1 / 3;
+}
+.logo {
+  justify-self: start;
+}
+
+.header .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column: 2 / 3;
+  align-self: center;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 50px;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
+}
+
+
+.nav{
+  grid-column: 2 / 3;
+  display: grid;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.article .card {
+  height: 200px;
+}
+
+.footer {
+  grid-column: 1 / 3;
+}
